# opsclaw

./: .gitignore  CHANGELOG.md  Cargo.toml  bunfig.toml  package.json  tsconfig.base.json
.github/workflows/: ci.yml
crates/oax-core/: Cargo.toml
crates/oax-llm/: Cargo.toml
crates/oax-runtime/: Cargo.toml
crates/oax-runtime/src/: alert.rs  budget.rs  cancellation.rs  events.rs  executor.rs  heartbeat.rs  ipc.rs  isolation.rs  lib.rs  mcp.rs  memory_store.rs  prompt.rs  router.rs  simulation.rs  state.rs  tool_boundary.rs
crates/oax-security/: Cargo.toml
crates/oax-skills/: Cargo.toml
crates/oax-tools/: Cargo.toml
crates/opsclaw/: Cargo.toml
crates/opsclaw/src/: channels_router.rs  discord_adapter.rs  ipc_socket.rs  live_runtime.rs  main.rs  mcp_stdio.rs  retry_runtime.rs  setup_wizard.rs  skill_install.rs  slack_adapter.rs  slack_approval.rs  slack_collaboration.rs  squad_responder.rs  squad_runtime.rs  telegram_adapter.rs  webhook_runtime.rs
docker/: Dockerfile  docker-compose.yaml
docs/: README.md  agent-index.yaml  api-reference.md  architecture.md  concepts.md  docs-site-index.md  getting-started.md  skills.md
docs/api/: mission-control-openapi.yaml
docs/blog/: 2026-02-17-phase-2-content-system.md  2026-02-18-phase-3-slack-design-decisions.md  2026-02-18-phase-3-v0-1-launch.md  2026-02-18-phase-4-design-decisions.md  2026-02-18-phase-4-mission-control-progress.md  2026-02-18-phase-5-engineering-design-decisions.md  2026-02-18-phase-5-engineering-recap.md  2026-02-18-phase-5-engineering-reliability-process.md  README.md  editorial-workflow.md
docs/developer-guide/: README.md  dashboard-economics-conversations.md  dashboard-frontend-foundation.md  dashboard-kanban-approvals.md  docs-release-hardening.md  kpi-telemetry-hardening.md  mission-control-architecture.md  phase-1-safety-audit.md  release-packaging.md  slack-integration.md
docs/plans/: 2026-02-17-phase-0-workspace-foundations.md  2026-02-17-phase-1-agent-cancellation-slice.md  2026-02-17-phase-1-alert-ingestion-slice.md  2026-02-17-phase-1-approval-card-slice.md  2026-02-17-phase-1-core-safety-slice-1.md  (+97 more)
scripts/: generate-types.sh
(+103 files in other folders)
