[package]
name = "oax-runtime"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
oax-core = { path = "../oax-core" }
oax-security = { path = "../oax-security" }
oax-tools = { path = "../oax-tools" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.23.0"
