[package]
name = "opsclaw"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "opsclaw"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
oax-core = { path = "../oax-core" }
oax-llm = { path = "../oax-llm" }
oax-runtime = { path = "../oax-runtime" }
oax-security = { path = "../oax-security" }
oax-skills = { path = "../oax-skills" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.25.0"
