[package]
name = "opsclaw"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "opsclaw"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
oax-core = { path = "../oax-core" }
oax-llm = { path = "../oax-llm" }
oax-runtime = { path = "../oax-runtime" }
oax-security = { path = "../oax-security" }
oax-skills = { path = "../oax-skills" }
oax-tools = { path = "../oax-tools" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tiny_http = "0.12.0"
ureq = { version = "2.12.1", features = ["json"] }
url = "2.5.8"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.25.0"
